--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Dog Blog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
 <body>
@@ -32,21 +32,21 @@
             <div class="card">
                 <h2>Feliz Navidog</h2>
                 <h3>December 25, 2020</h3>
-                <img class="image" src="../images/christmas_dog.png" alt="Dog dressed as reindeer">
+                <img class="image" src="images/christmas_dog.png" alt="Dog dressed as reindeer">
                 <p>Back at it again with seasonal dog pics...</p>
-                <a class="read-button" href="post.html" target="_blank" role="button" style="margin:5px;">Read more &nbsp; &raquo;</a>
+                <a class="read-button" href="views/post.html" target="_blank" role="button" style="margin:5px;">Read more &nbsp; &raquo;</a>
             </div>
             <div class="card">
                 <h2>Happy Pawnukkah</h2>
                 <h3>December 10, 2020</h3>
-                <img class="image" src="../images/hanukkah_dog.jpg" alt="Puppies celebrating Hanukkah">
+                <img class="image" src="images/hanukkah_dog.jpg" alt="Puppies celebrating Hanukkah">
                 <p>Happy Pawnukkah, everyone! Check out...</p>
                 <button class="read-button">Read more &nbsp; &raquo;</button>
             </div>
             <div class="card">
                 <h2>Thanksgiving Pups</h2>
                 <h3>November 26, 2020</h3>
-                <img class="image" src="../images/pie_dog.jpg" alt="Dog with pie hat">
+                <img class="image" src="images/pie_dog.jpg" alt="Dog with pie hat">
                 <p>This year we're grateful for cute dogs...</p>
                 <button class="read-button">Read more &nbsp; &raquo;</button>
             </div>
